frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
          - name: single-request-reopen
      dnsPolicy: ClusterFirst
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - default
                topologyKey: kubernetes.io/hostname
      terminationGracePeriodSeconds: 120
      imagePullSecrets:
      - name: google
      containers:
      - name: default
        image: ubuntu:20.04
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
          httpGet:
            path: /_ping
            port: 80
        readinessProbe:
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
          httpGet:
            path: /_ping
            port: 80
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/bash
              - -c
              - 'sleep 120'
