frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default
spec:
  type: ClusterIP
  selector:
    app: default
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
